nav invisible link issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -703,7 +703,8 @@ body {
   text-transform: uppercase;
   background-image: linear-gradient(120deg, transparent 0%, transparent 50%, white 50%);
   background-size: 225%;
-  transition: all 0.5s; }
+  transition: all 0.5s;
+  visibility: hidden; }
   .navigation__link:link span, .navigation__link:visited span {
     margin-right: 2rem;
     display: inline-block; }
@@ -720,6 +721,9 @@ body {
 .navigation__checkbox:checked ~ .navigation__nav {
   width: 100%;
   opacity: 1; }
+
+.navigation__checkbox:checked ~ .navigation__nav > .navigation__list > .navigation__item > .navigation__link:link, .navigation__checkbox:checked ~ .navigation__nav > .navigation__list > .navigation__item > .navigation__link:visited {
+  visibility: visible; }
 
 .header {
   position: relative;
